@@ -42,7 +42,7 @@ scripts.
 There are four required options to i2cset. \fIi2cbus\fR indicates the number
 or name of the I2C bus to be scanned.  This number should correspond to one of
 the busses listed by \fIi2cdetect -l\fR. \fIchip-address\fR specifies the
-address of the chip on that bus, and is an integer between 0x00 and 0x7F.
+address of the chip on that bus, and is an integer between 0x03 and 0x77.
 \fIdata-address\fR specifies the address on that chip to write to, and is an
 integer between 0x00 and 0xFF. \fIvalue\fR is the value to write to that
 location on the chip.
