@@ -7,10 +7,12 @@ SVN
              Shorten the usage message
   i2cdump: Support i2c bus passed by name
            Shorten the usage message
+           Restrict the chip address to 0x03-0x77
   i2cget: Support i2c bus passed by name
           Shorten the usage message
   i2cset: Support i2c bus passed by name
           Shorten the usage message
+          Restrict the chip address to 0x03-0x77
 
 3.0.1 (2008-04-04)
   Drop the trailing .pl from all perl script names
